--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "aws-vibe-guru"
-version = "0.0.2"
+version = "0.1.0"
 description = "A CLI tool for extracting AWS metrics and managing resources"
 authors = [
     {name = "Daniel Bastos", email = "danielfloresbastos@gmail.com"}
@@ -65,7 +65,6 @@ include = [
     "/pyproject.toml",
 ]
 
-# Ruff configuration
 [tool.ruff]
 target-version = "py38"
 line-length = 118
@@ -78,7 +77,7 @@ select = [
     "I",   # isort
     "C",   # flake8-comprehensions
     "B",   # flake8-bugbear
-    "UP",  # pyupgrade
+    "UP",  # pyupgrade",
 ]
 ignore = [
     "E501",  # line too long, handled by formatter
@@ -95,7 +94,6 @@ line-ending = "auto"
 [tool.ruff.lint.isort]
 known-first-party = ["aws_vibe_guru"]
 
-# isort configuration
 [tool.isort]
 profile = "black"
 multi_line_output = 3
@@ -103,7 +101,6 @@ line_length = 88
 known_first_party = ["aws_vibe_guru"]
 skip_glob = ["*/__pycache__/*"]
 
-# pytest configuration
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
