--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dev = [
     "pytest-cov>=4.0.0",
     "pytest-mock>=3.10.0",
     "pre-commit>=3.0.0",
+    "build>=1.0.0",
+    "twine>=4.0.0",
 ]
 
 [project.urls]
